--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "ai-orchestra-backend",
+  "name": "ai-orchestra",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "dependencies": {
-    "@supabase/supabase-js": "^2.39.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.0.0",
-    "node-fetch": "^3.3.2"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
